Add devise and facebook omniauth authentication

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ DATABASE_NAME=performance_calculator
 DATABASE_PASSWORD=OtbOtb
 DATABASE_PORT=3306
 DATABASE_USER=otb
+
+FACEBOOK_KEY=546780365978888
+FACEBOOK_SECRET=bbefd6ef7b6157b392355122b01d62bf
